pkg/provider/kubernetes/ingress-nginx/fixtures/ingresses/ingress-with-external-name.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-with-external-name
  namespace: default

spec:
  ingressClassName: nginx
  rules:
    - host: external.localhost
      http:
        paths:
          - path: /external-with-port
            pathType: Exact
            backend:
              service:
                name: external
                port:
                  number: 80
          - path: /external-with-named-port
            pathType: Exact
            backend:
              service:
                name: external
                port:
                  name: http
          - path: /external-without-port
            pathType: Exact
            backend:
              service:
                name: external
                port:
                  number: 80
          - path: /external-without-named-port
            pathType: Exact
            backend:
              service:
                name: external
                port:
                  name: foo
